# Nemix-fastapi-template

./: .env.example  .gitignore  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
app/: __main__.py  config.py  logger.py  main.py
app/api/: __init__.py  dependencies.py  tasks.py  users.py
app/api/v1/: __init__.py  dependencies.py  login.py  response.py  task.py  user.py  users.py
app/api/v1/auth/: auth.py  cookie.py  jwt.py  schemas.py
app/api/v1/dependencies/: auth_token.py  redis.py
app/cache/: auth_token.py  cache.py
app/db/: base.py  database.py
app/db/models/: __init__.py  tasks.py  user.py  users.py
app/db/repositories/: tasks.py  users.py
app/schemas/: tasks.py  users.py
app/security/: access_token.py  hashed_password.py
app/services/: login.py  tasks.py  users.py
app/utils/: decorators.py  repository.py  unitofwork.py
docker/: run_migrations.sh  wait_for_it.sh
migrations/: env.py
migrations/versions/: 18ecb9368fbe_init.py  86f99705547e_init2.py  a1738491cbdf_initial.py  bc7488bd1143_init.py  c33e13606225_init.py  d7bc28369486_delete_user_id_in_user.py  d89f91263407_init.py
