[tool.poetry]
name = "nemix-fastapi-template"
version = "0.1.0"
description = ""
authors = ["Vasiliynemix <vasyanemix@gmail.com>"]
readme = "README.md"
packages = [{include = "nemix_fastapi_template"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.1"
uvicorn = {extras = ["standart"], version = "^0.23.2"}
pydantic = {extras = ["email"], version = "^2.3.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.20"}
aiosqlite = "^0.19.0"
pydantic-settings = "^2.0.3"
asyncpg = "^0.28.0"
alembic = {extras = ["asyncio"], version = "^1.12.0"}
python-multipart = "^0.0.6"
python-jose = "^3.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
black = "^23.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
